--- a/css/styles.css
+++ b/css/styles.css
@@ -303,24 +303,55 @@ a{
   width: 90%;
   margin: auto;
   padding-bottom: 3rem;
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
 }
 @media (min-width: 768px) { 
    .albumes{
-    display: grid;
+    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
     column-gap: 2rem;
     row-gap: 1rem;
    }
 }
+
+.div-disco{
+  position: relative;
+}
+
+.portada{
+  position: absolute;
+  z-index: 10;
+  transition: transform 0.7s ease-in-out;
+}
+
+.disco{
+  position: absolute;
+   z-index: 5;
+   transition: transform 0.7s ease-in-out;
+}
+.enlace-album{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .albumes img{
   width: 100%;
   height: auto;
   transform: scale(1);
-  transition: transform 0.5s ease-in-out;
+ 
 }
 .albumes a:hover img{
   transform: scale(1.08);
 }
+.albumes a:hover .disco{
+  transform: translateX(20%);
+}
+.albumes a:hover .portada{
+  transform: translateX(-10%);
+}
+
 .albumes p{
   margin: 0;
   margin: 1rem auto 3rem auto;
