--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ a{
   left: 0;
   width: 100%;
   background-color: var(--negro);
-  z-index: 10;
+  z-index: 20;
   
 }
 
@@ -326,14 +326,15 @@ a{
 }
 
 .disco{
-  position: absolute;
    z-index: 5;
    transition: transform 0.7s ease-in-out;
 }
+
 .enlace-album{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+   overflow: hidden;
 }
 
 .albumes img{
@@ -358,6 +359,7 @@ a{
   width: 100%;
   font-size: 2rem;
   text-transform: uppercase;
+  position: relative;
 }
 
 /*video*/
